--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.show-sql=true
 # 3. 더미데이터 생성 classpath >> resources 경로
 spring.sql.init.data-locations=classpath:db/data.sql
 spring.jpa.defer-datasource-initialization=true
+
+# 4. mustache session request
+spring.mustache.servlet.expose-session-attributes=true
+spring.mustache.servlet.expose-request-attributes=true
